--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,17 @@ code {
 .m-2{
   margin:1rem;
 }
+
+.open{
+  z-index:1003;
+  display:block;
+  opacity:1;
+  top:10%;
+  transform: scaleX(1) scaleY(1);
+}
+
+.open-overlay{
+  z-index:1002;
+  display:block;
+  opacity:0.5;
+}
